--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #canvas{
-    border: 5px solid black;
+    border: 5px lightblue solid;
     height: 500px;
     width: 900px;
     margin-bottom: 2em;
